--- a/prace-domowe/praca_domowa_funkcje.rmd
+++ b/prace-domowe/praca_domowa_funkcje.rmd
@@ -41,11 +41,17 @@ Przydatne funkcje: `sort` oraz `length`.
 
 ```{r}
 srednia_przycieta <- function(wektor, ileprocentprzycinamy = 10){
-  ile_przycinamy = length(wektor) * ileprocentprzycinamy / 100
-  for (x in 1:length(wektor)){
-    
-  }
+  sort(wektor)
+  ile_przyciac = length(wektor) * ileprocentprzycinamy / 100
+
+  wektor <- head(wektor, length(wektor) - ile_przyciac)
+  wektor <- tail(wektor, length(wektor) - ile_przyciac)
+  
+  return(wektor)
+
 }
+
+cat(srednia_przycieta(c(1,1,2,3,4,4,4,4,5,6,7,8,8,8,8,10,12,15,15,19), 10))
 ```
 
 # Średnia Tukeya
