--- a/prace-domowe/praca_domowa_struktury_kontrolne.rmd
+++ b/prace-domowe/praca_domowa_struktury_kontrolne.rmd
@@ -26,7 +26,7 @@ for (wiersz in 1:nrow(USArrests)){
       
       zdania <- list()
       
-      for (k in 1:4){
+      for (k in 1:ncol(USArrests)){
         val = USArrests[[k]][wiersz]
         avg = round(mean(USArrests[[k]]))
   
